--- a/er/8-key_findings.adoc
+++ b/er/8-key_findings.adoc
@@ -59,7 +59,7 @@ The following table presents Technology Integration Experiments (TIE) that were 
 .Technology Integration Experiments (TIE) for OGC APIs
 [cols=",,,,,,,,",width="75%",options="header",align="center"]
 |===
-|Services\Client | Hexagon | Helyx | OpenSphere | Esri | Solenix | EURAC | Sinergise | [GeoPackage/MapCache](http://ngageoint.github.io/GeoPackage/)
+|Services\Client | Hexagon | Helyx | OpenSphere | Esri | Solenix | EURAC | Sinergise | GeoPackage/MapCache
 
 |52 North |  | Processes  | | | Processes | | |
 
@@ -79,7 +79,7 @@ The following table presents Technology Integration Experiments (TIE) that were 
 
 |rasdaman | | | | | | Coverages | Coverages |
 
-|[MAGE](https://github.com/ngageoint/mage-server/tree/wfs3) | | | | | | | | Features
+|MAGE | | | | | | | | Features
 
 |===
 
