--- a/er/8-key_findings.adoc
+++ b/er/8-key_findings.adoc
@@ -69,7 +69,7 @@ The following table presents Technology Integration Experiments (TIE) that were 
 
 |Helyx |  | Processes  |  | | | | |
 
-|pygeoapi |  |  | Features | | Processes | | |
+|pygeoapi |  |  | Features | | Processes | | | Features
 
 |Geoserver |  |   | Features | | | | |
 
