--- a/er/5-introduction.adoc
+++ b/er/5-introduction.adoc
@@ -140,6 +140,7 @@ The following organizations participated in the Hackathon:
 * blockdore
 * Board Adviser
 * British Antarctic Survey
+* CACI (BIT Systems)
 * Cicy
 * CREAF
 * CubeWerx Inc.
