--- a/er/participanting-organizations/NGAMobileApps.adoc
+++ b/er/participanting-organizations/NGAMobileApps.adoc
@@ -12,13 +12,19 @@ Robert St. John:::
 * Assess the feasibility of implementing OGC's new OpenAPI-based
 Features API as native operations in the MAGE server to expose MAGE data
 through a standard, interoperable API.
-* Assess the feasibility of impementing a consumer of OGC's new OpenAPI-based Features API that can build GeoPackages using standard feature
+* Assess the feasibility of implementing a consumer of OGC's new OpenAPI-based Features API that can build GeoPackages using standard feature
 data from multiple different services for offline use in MAGE and any other
 offline-capable mobile app.
 
 ==== Implemented Solution
 
-MAGE server OGC API - Features: https://github.com/ngageoint/mage-server/tree/wfs3
+* MAGE server OGC API - Features: https://github.com/ngageoint/mage-server/tree/wfs3
+* OGC OpenAPI Features JSON - https://github.com/ngageoint/openapi-features-json-java
+** Extends Simple Features GeoJSON Java - https://github.com/ngageoint/simple-features-geojson-java/tree/develop
+* GeoPackage Feature generator
+** https://github.com/ngageoint/geopackage-core-java/tree/develop/src/main/java/mil/nga/geopackage/features
+** https://github.com/ngageoint/geopackage-java/tree/develop/src/main/java/mil/nga/geopackage/features
+** https://github.com/ngageoint/geopackage-android/tree/develop/geopackage-sdk/src/main/java/mil/nga/geopackage/features
 
 ==== Proposed Alternatives
 
@@ -26,8 +32,13 @@ TBA
 
 ==== Experiences with OGC API Specifications
 
-TBA
+* The [OGC API - Features repository](https://github.com/opengeospatial/WFS_FES) reuse of the [Simple Features specification](https://www.opengeospatial.org/standards/sfa) was helpful.
 
 ==== Other Impressions & Recommendations
 
-TBA
+* Keep the [OGC API - Features](https://github.com/opengeospatial/WFS_FES) repository up to date, including
+** the [SwaggerHub](https://app.swaggerhub.com/apis/cholmesgeo/WFS3/M1) referenced from the README
+** the local yaml documents
+* Improved documentation on the use of the CRS extension
+* Improved documentation on the use of Accept in the HTTP request header and how it relates to the f parameter in next links
+* Validate the [referenced implementations](https://github.com/opengeospatial/WFS_FES/blob/master/implementations.md) against the current specification
