--- a/er/participanting-organizations/NGAMobileApps.adoc
+++ b/er/participanting-organizations/NGAMobileApps.adoc
@@ -20,7 +20,7 @@ offline-capable mobile app.
 
 * MAGE server OGC API - Features: https://github.com/ngageoint/mage-server/tree/wfs3
 * OGC OpenAPI Features JSON - https://github.com/ngageoint/openapi-features-json-java
-** Extends Simple Features GeoJSON Java - https://github.com/ngageoint/simple-features-geojson-java/tree/develop
+** Extends Simple Features GeoJSON - https://github.com/ngageoint/simple-features-geojson-java/tree/develop
 * GeoPackage Feature generator
 ** https://github.com/ngageoint/geopackage-core-java/tree/develop/src/main/java/mil/nga/geopackage/features
 ** https://github.com/ngageoint/geopackage-java/tree/develop/src/main/java/mil/nga/geopackage/features
@@ -32,13 +32,13 @@ TBA
 
 ==== Experiences with OGC API Specifications
 
-* The [OGC API - Features repository](https://github.com/opengeospatial/WFS_FES) reuse of the [Simple Features specification](https://www.opengeospatial.org/standards/sfa) was helpful.
+* The https://github.com/opengeospatial/WFS_FES[OGC API - Features repository] reuse of the https://www.opengeospatial.org/standards/sfa[Simple Features specification] was helpful.
 
 ==== Other Impressions & Recommendations
 
-* Keep the [OGC API - Features](https://github.com/opengeospatial/WFS_FES) repository up to date, including
-** the [SwaggerHub](https://app.swaggerhub.com/apis/cholmesgeo/WFS3/M1) referenced from the README
+* Keep the https://github.com/opengeospatial/WFS_FES[OGC API - Features] repository up to date, including
+** the https://app.swaggerhub.com/apis/cholmesgeo/WFS3/M1[SwaggerHub] referenced from the README
 ** the local yaml documents
 * Improved documentation on the use of the CRS extension
 * Improved documentation on the use of Accept in the HTTP request header and how it relates to the f parameter in next links
-* Validate the [referenced implementations](https://github.com/opengeospatial/WFS_FES/blob/master/implementations.md) against the current specification
+* Validate the https://github.com/opengeospatial/WFS_FES/blob/master/implementations.md[referenced implementations] against the current specification
