--- a/er/participanting-organizations/Spacebel.adoc
+++ b/er/participanting-organizations/Spacebel.adoc
@@ -14,11 +14,11 @@ In addition, Spacebel was also present in London to participate with ESA support
 
 ==== Implemented Solution
 
-DataBio Catalog Server (https://databio.spacebel.be/eo-catalog/readme.html) hosting EO applications and services (OGC 19-020), EO collections (OGC 17-084) and EO product (OGC 17-003) metadata implementing OpenSearch (OGC 10-032r8 and OGC 13-026r8) and Open API Common interfaces.  Resources `/`, `/conformance`, `/collections` were implemented and interoperability was demonstrated through TIE testing with the http://frozen-lime.surge.sh/[OpenSphere client] implementing OGC API Features provided by another participant. A `limit`
+(1) DataBio Catalog Server (https://databio.spacebel.be/eo-catalog/readme.html) hosting EO applications and services (OGC 19-020), EO collections (OGC 17-084) and EO product (OGC 17-003) metadata implementing OpenSearch (OGC 10-032r8 and OGC 13-026r8) and Open API Common interfaces.  Resources `/`, `/conformance`, `/collections` were implemented and interoperability was demonstrated through TIE testing with the http://frozen-lime.surge.sh/[OpenSphere client] implementing OGC API Features provided by another participant. A `limit`
 parameter needed to be added server-side in addition to the `maximumRecords` parameter (which was used to comply with OASIS searchRetrieve (SRU) specifications) which was originally mapped on `{count}`.
 
 
-
+(2) Web Processing Service (http://34.77.240.214/ades-proxy/swagger-ui/index.html) with a OGC API for Processing as defined in OGC Testbed 14 (https://raw.githubusercontent.com/spacebel/testbed14/master/json-spec/wps-t_tb14_spacebel-v1.6.yaml), including the Transactional and the Quoting & Billing extensions. Resources `/`, `/conformance`, `/processes`, `/jobs`were implemented and itneroperability was shown through TIE testing with the Solenix client.
 
 
 ==== Proposed Alternatives
@@ -27,17 +27,61 @@ The Catalog Server combines an OpenSearch interface with GeoJSON responses (OGC 
 
 ==== Experiences with OGC API Specifications
 
-Spacebel has experience with Swagger and OpenAPI since 2016 and already used this in previous OGC Testbeds.  Wrapping an OpenSearch compliant catalog with an OGC API Common interface was achieved as part of the hackaton.  Extending the interface to OGC API Features (mainly temporal and geograpical searches) is future work.
+Spacebel has experience with Swagger and OpenAPI since 2016 and already used this in previous OGC Testbeds.  
 
-The following screenshots show that service and application data and EO product metadata could be sucessfully discovered via the OpenSphere client accessing the DataBio Catalog Server.
+===== OGC API Common 
+
+Wrapping an OpenSearch compliant catalog with an OGC API Common interface was achieved as part of the hackaton.  Extending the interface to OGC API Features (mainly temporal and geograpical searches) is future work.
+
+The figure below shows that service and application data could be sucessfully discovered via the OpenSphere client accessing the DataBio Catalog Server.
 
 [#img_object_openapi,reftext='{figure-caption} {counter:figure-num}']
 .EO Service and Application metadata (OGC 19-020) from DataBio and OGC Testbed-15 shown in OpenSphere
 image::../images/spacebel-1.png[align="center"]
 
+The OpenSpere client also allows browsing EO Product metadata, visualise corresponding footprints on the map and display metadata properties for a particular EO Product.
+
 [#img_object_openapi,reftext='{figure-caption} {counter:figure-num}']
 .EO Product metadata (OGC 17-003) shown in OpenSphere
 image::../images/spacebel-2.png[align="center"]
+
+===== OGC API for Processing 
+
+A major discussion during the OGC Hackaton 2019 (London) was about describing the process interfaces (i.e. the Process Description including inputs and outputs definitions) directly in JSON Schema and/or OpenAPI. Indeed, as OpenAPI already supports descriptions of schemas/interfaces, this would remove the need of using a specific Process Description schema, and this would also ease the work of Web client developers.
+
+For each existing process, a resource with a HTTP path is defined in the API document. Therefore, processes are discovered through the API document (no need of discovery and describe process operations) and the Client directly knows how to invoke the execution. The API document is illustrated below:
+
+.Example of processes exposed as OpenAPI operations
+[source]
+----
+openapi: 3.0.0
+paths:
+ # For each process the path and interface is provided as below
+ '/processes/mySampleProcess/jobs':
+   post:
+      summary: Start mySampleProcess execution.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/mySampleProcessExecuteRequest'
+      responses:
+        '201':
+          headers:
+            Location:
+              schema:
+                type: string
+              description: URL to check the status of the execution/job.
+----
+
+A complete report about the mapping between the Process Description specification and the JSON Schema format is available at https://github.com/spacebel/testbed14/wiki/OGC-Hackaton-2019.
+
+Others topics habe also been covered during the Hackaton:
+
+* The transactional extension specification has been submitted to the offical github repository at https://github.com/opengeospatial/wps-rest-binding/commit/7bdee9df5652ad3a7ad13075c535b84f9b264d0b.
+* An extension supporting callbacks would allow a more modern pattern for monitoring the jobs status. Instead of observing (repeated polling), the client can be notified on the following event: onSuccess, onFailure, onUpdate. Spacebel has proposed a draft specification for such notification feature (relying on OpenAPI callbacks): https://github.com/opengeospatial/wps-rest-binding/commit/8cc2bdaf6483af7d8c5a85c7ad0a45b8e68cc4b6
+* A very classical issue related to the possibility to report list of files as outputs was discussed. The conclusion of the discussion was that the new Processing API should support the presence of output file arrays.
+* Some fixes listed at https://github.com/opengeospatial/wps-rest-binding/issues have been proposed during the Hackaton.
 
 ==== Other Impressions & Recommendations
 
@@ -47,4 +91,14 @@ The approach to represent links in JSON is unfortunately different that the enco
 
 The OGC API specifications are imposing to advertise "paths" in the Landing Page response and also contain wording suggesting that actual path names such as "api", "conformance", "collections" are mandatory and not just examples.  This should be made clearer and it seems redundant to impose the declaration of paths in the landing page if indeed the path names are "fixed".
 
+==== Other Impressions & Recommendations
+
+Further alignment of the OpenSearch Catalog Server with OGC API Features interfaces, requires reconciling the time and bbox related search parameters from OGC 10-032 and OGC API Features.  While OGC 10-032r8 has separate search parameters representing the start and end of a search interval `{time:start}` and `{time:end}` respectively, OGC API Features imposes a single search parameter to represent the interval.  
+
 OpenSearch and OpenAPI Common convergence would benefit from a revision of OGC 10-032r8 to ensure that the geo:box, time:start and time:end can be combined in a single URL template with the actual parameter names imposed by OpenAPI Common for temporal and geographical search.
+
+The approach to represent hyperlinks in JSON is unfortunately different from the encoding proposed by OGC 14-055r2 which means that an OpenSearch implemention based simultaneously on OGC 14-055r2 and OGC 17-047 in combination with OGC API Common will have different encodings for links in search responses and in other resource representations (e.g. `/conformance`, `/` etc).
+
+The OGC API specifications are imposing to advertise "paths" in the Landing Page response and also contain wording suggesting that actual path names such as "api", "conformance", "collections" are mandatory and not just examples.  This should be made clearer and it seems redundant to impose the declaration of paths in the landing page if indeed the path names are "fixed".
+
+
